2017-11-11  Bruno Haible  <bruno@clisp.org>

	Record whether KERNELVOID32_HEAPCODES works.
	* lispbibl.d (KERNELVOID32_HEAPCODES_WORKS): Define for each 32-bit
	platform.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Find good parameters for using ONE_FREE_BIT_HEAPCODES, per platform.
	* lispbibl.d (garcol_bit_o, imm_type_shift, oint_type_*, oint_addr_*):
	Find appropriate values for ONE_FREE_BIT_HEAPCODES, depending on
	TRIVIALMAP_MEMORY.
	(HEAPCODES1BIT_WITH_TRIVIALMAP_WORKS, HEAPCODES1BIT_WITH_MALLOC_WORKS):
	Define for each platform.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Check the mymalloc return value also when ONE_FREE_BIT_HEAPCODES.
	* spvw_allocate.d (pointable_usable_test): For ONE_FREE_BIT_HEAPCODES,
	check against the garcol_bit.
	(fprint_mymalloc_diagnostic): New function.
	(mymalloc): Use it.
	* spvw_allocate_old.d: Likewise.
	* spvw.d (init_memory): Use fprint_mymalloc_diagnostic.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Find good parameters for using TYPECODES model, for each platform.
	* lispbibl.d (TRIVIALMAP_MEMORY): Move definition up, before the
	decision between TYPECODES and HEAPCODES.
	(oint_type_*, oint_addr_*, garcol_bit_o): Find appropriate values for
	TYPECODES, for selected platforms.
	(TYPECODES_WITH_TRIVIALMAP_WORKS, TYPECODES_WITH_MALLOC_WORKS): Define
	for each platform.
	* Makefile.devel (build-porting*-typecodes-spvw_mixed_blocks): Split
	into build-porting*-typecodes-spvw_mixed_blocks-malloc
	and build-porting*-typecodes-spvw_mixed_blocks-trivialmap.
	(build-porting*-one_free_bit_heapcodes): Split into
	build-porting*-one_free_bit_heapcodes-malloc and
	build-porting*-one_free_bit_heapcodes-trivialmap, accordingly.
	(build-porting*-try1_typecodes, build-porting*-try2_typecodes): Remove
	targets.
	(build-porting32-*-kernelvoid32_heapcodes,
	build-porting64-*-generic64_heapcodes): Don't prevent the use of
	GENERATIONAL_GC.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Update support for Linux/hppa and Linux/m68k.